# w5500-json

./: Cargo.toml  LICENSE  README.md  justfile  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: on_commit.yml
src/: board.rs  config.rs  echo.rs  lib.rs  main.rs  network.rs  relay.rs  socket.rs  udp.rs  wiznet.rs
src/hardware/: board.rs  error.rs  mod.rs  network.rs  run.rs  wiznet.rs
src/tasks/: ethernet.rs
tests/: e2e.rs  performance.rs
tests/common/: mod.rs
