[package]
name = "w5500-json"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = { version = "0.7.5", default-features = false }
panic-halt = { version = "1.0.0", default-features = false }
embedded-hal-bus = { version = "0.3.0", default-features = false, features = ["async"] }
static_cell = { version = "1.3.0", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde-json-core = { version = "0.6.0", default-features = false }

embassy-rp = { version = "0.9.0", default-features = false, features = ["rp2040", "critical-section-impl", "time-driver", "default"] }
embassy-time = { version = "0.5.0", default-features = false }
embassy-net = { version = "0.7.1", default-features = false, features = ["udp", "proto-ipv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.2.1", default-features = false }
embassy-executor = { version = "0.9.1", default-features = false, features = ["arch-cortex-m", "executor-thread"], optional = true }

[dev-dependencies]
autospy = { version = "1.5.0", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt"] }
colored = { version = "3.0.0", default-features = false }

[[bin]]
name = "w5500-json"
required-features = ["arm"]

[features]
arm = ["dep:embassy-executor"]