[package]
name = "w5500-json"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = { version = "0.7.5", default-features = false }
defmt = { version = "1.0.1", default-features = false }
defmt-rtt = { version = "1.1.0", default-features = false }
panic-probe = { version = "1.0.0", default-features = false, features = ["print-defmt"] }
embedded-hal-bus = { version = "0.3.0", default-features = false, features = ["async"] }
static_cell = { version = "1.3.0", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde-json-core = { version = "0.6.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4"] }

embassy-rp = { version = "0.9.0", default-features = false, features = ["rp2040", "critical-section-impl", "time-driver", "default", "defmt"] }
embassy-time = { version = "0.5.0", default-features = false, features = ["defmt"] }
embassy-net = { version = "0.7.1", default-features = false, features = ["proto-ipv4", "medium-ethernet", "defmt", "raw"] }
embassy-net-wiznet = { version = "0.2.1", default-features = false, features = ["defmt"] }
embassy-executor = { version = "0.9.1", default-features = false, features = ["arch-cortex-m", "executor-thread", "defmt"], optional = true }

[dev-dependencies]
autospy = { version = "1.5.0", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt"] }
colored = { version = "3.0.0", default-features = false }

[[bin]]
name = "w5500-json"
required-features = ["arm"]

[features]
arm = ["dep:embassy-executor"]

[profile.release]
debug = 2 # provides DWARF info for probe-rs
lto = true
opt-level = 'z'